# toolbox

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
.github/workflows/: pre-commit.yml  test-and-coverage.yml
playlist-downloader/: .gitignore  README.md  main.py
youtube-playlist-downloader/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
youtube-playlist-downloader/tests/: test_main.py
